[package]
name = "ilp"
version = "0.1.0"
authors = ["Evan Schwartz <evan.mark.schwartz@gmail.com>"]

[dependencies]
base64 = "0.6.0"
byteorder = "1.0.0"
chrono = "0.4.0"
clap = "2.26.0"
ilp-packet = { path = "../ilp-packet" }
quick-error = "1.2.1"
rand = "0.3"
reqwest = "0.7.3"
ring = "0.12.1"
serde = "1.0.12"
serde_derive = "1.0.12"
serde_json = "1.0.3"
uuid = { version = "0.4", features = ["serde", "v4"] }
